# acto

./: (ru) readme.txt  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README  README.md  llvm-toolchain.cmake  multiprog.sln
.github/workflows/: cmake.yml
0.2.7/: (ru) readme.txt
0.2.7/multiprog/: act_o.cpp
0.2.7/multiprog/core/: CMakeLists.txt  core.cpp  core.h  message.cpp  runtime.h  struct.h  worker.cpp
0.2.7/multiprog/extension/: services.cpp
0.2.7/multiprog/system/: CMakeLists.txt  mutex.cpp  thread.cpp  thread.h
0.2.8/: CMakeLists.txt  multiprog.sln
0.2.8/multiprog/: CMakeLists.txt  acto.cpp  acto.h  multiprog.vcproj
0.2.8/multiprog/core/: CMakeLists.txt  message.h  runtime.cpp  runtime.h
0.2.8/multiprog/extension/: CMakeLists.txt  services.h
0.2.8/multiprog/generic/: delegates.h  queue.h  sequence.h
0.2.8/multiprog/modules/main/: worker.cpp  worker.h
0.2.8/multiprog/remote/: protocol.h  remote.vcproj
0.2.8/multiprog/remote/libsocket/: libsocket.h  runtime.cpp
0.2.8/multiprog/system/: atomic.h  thread.cpp  thread_pool.cpp  thread_pool.h
0.2.8/samples/cycles/: CMakeLists.txt
0.2.8/samples/ping-pong/: CMakeLists.txt  main.cpp  ping-pong.vcproj
0.2.8/samples/sotest/: CMakeLists.txt
0.2.8/tests/thread/: CMakeLists.txt  main.cpp  thread.vcproj
0.26/: CMakeLists.txt
0.26/multiprog/: act_o.cpp  act_user.h  acto.h  multiprog.vcproj
0.26/multiprog/core/: CMakeLists.txt  core.cpp  core.h  message.cpp  message.h  struct.h  worker.cpp  worker.h
0.26/multiprog/extension/: services.cpp
0.26/multiprog/generic/: sequence.h
0.26/multiprog/system/: atomic.h  event.cpp  mutex.cpp  mutex.h  thread.h
0.26/samples/cycles/: CMakeLists.txt  main.cpp
0.26/samples/ping-pong/: CMakeLists.txt  main.cpp
doc/: doxygen.cfg
include/acto/: acto.h  event.h  generics.h  intrusive.h  util.h
lib/: CMakeLists.txt  acto.cpp  acto.h  base.cpp  base.h  event.cpp  event.h  generics.h  intrlist.h  module.cpp  module.h  platform.h  queue.h  runtime.cpp  runtime.h  sequence.h  services.h  stack.h  worker.cpp  worker.h
lib/core/: base.cpp  base.h  module.cpp  module.h  runtime.cpp  runtime.h  worker.cpp  worker.h
lib/util/: event.cpp  event.h  intrqueue.h  queue.h  sequence.h  stack.h
multiprog/: CMakeLists.txt  act_core.cpp  act_mswin.cpp  act_o.cpp  act_services.cpp  act_user.h  acto.cpp  acto.h  config.h  multiprog.h  multiprog.vcproj  multiprog.vcxproj  multiprog.vcxproj.filters
multiprog/acto/: act_config.h  act_core.cpp  act_core.h  act_o.cpp  act_o.h  act_services.h  act_struct.h  act_types.h  act_user.h  messages.inl  methods.inl  worker.cpp
multiprog/core/: CMakeLists.txt  act_core.cpp  act_core.h  act_struct.h  actor.cpp  actor.h  alloc.h  base.cpp  base.h  bus.h  core.cpp  core.h  message.cpp  message.h  module.cpp  module.h  runtime.cpp  runtime.h  serialization.h  services.cpp  services.h  struct.h  thread_pool.cpp  thread_pool.h  types.cpp  types.h  worker.cpp  worker.h
multiprog/extension/: CMakeLists.txt  act_services.cpp  act_services.h  services.cpp  services.h
multiprog/generic/: intrlist.h  intrqueue.h  memory.h  ptr.h  queue.h  sequence.h  stack.h
multiprog/modules/main/: module.cpp  module.h  worker.cpp  worker.h
multiprog/remote/: CMakeLists.txt  client.cpp  client.h  protocol.h  remote.cpp  remote.h  transport.cpp  transport.h
multiprog/remote/libsocket/: CMakeLists.txt  libsocket.cpp  libsocket.h  runtime.cpp  runtime.h
multiprog/system/: CMakeLists.txt  act_mswin.cpp  act_mswin.h  atomic.h  event.cpp  event.h  linux.cpp  linux.h  mutex.cpp  mutex.h  platform.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h
multiprog/util/: CMakeLists.txt  intrlist.h  intrqueue.h  platform.h  ptr.h  stack.h  thread_pool.cpp  thread_pool.h
multiprog/util/generic/: noncopyable.h  queue.h  stack.h
multiprog/util/system/: CMakeLists.txt  event.cpp  event.h  mutex.cpp  thread_pool.cpp  thread_pool.h
samples/: CMakeLists.txt  acto.sln  cycles.cpp  ping-pong.cpp
samples/compiler/: compiler.vcproj
samples/cycles/: CMakeLists.txt  cycles.vcproj  cycles.vcxproj  main.cpp
samples/ping-pong/: CMakeLists.txt  main.cpp  ping-pong.vcproj  ping-pong.vcxproj
samples/sotest/: CMakeLists.txt  main.cpp
src/: acto.cpp  event.cpp  runtime.cpp  runtime.h  worker.cpp  worker.h
test/: CMakeLists.txt  tests.cpp
tests/mr/: CMakeLists.txt  main.cpp  mr.vcproj
tests/thread/: main.cpp  thread.vcxproj
tests/zfs/: CMakeLists.txt  main.cpp
zfs/chunk/: CMakeLists.txt  chunk.cpp  chunk.h  client.cpp
zfs/client/: CMakeLists.txt  zfslib.cpp  zfslib.h
zfs/master/: CMakeLists.txt  chunk_handler.cpp  client_handler.cpp  filedb.cpp  filetree.h  master.cpp  master.h  structs.h
zfs/port/: chariterator.h  fnv.h  macros.h  pointers.h  strings.h
zfs/rpc/: channel.h  rpc.h
